--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ dj-database-url==0.5.0
 Django==2.2.4
 django-crispy-forms==1.9.0
 gunicorn==20.0.4
+psycopg2==2.8.4
 pytz==2019.2
 sqlparse==0.3.0
 whitenoise==5.0.1
